# structural-dynamics-of-a-stellar-body

./: Cargo.toml  README.md
src/: .swp  chromosphere  core  main.rs  photosphere
src/chromosphere_module/: chromosphere.rs
src/core_module/: core.rs
src/corona_module/: corona  corona.rs  create_modules.sh  magnetic_reconnection.rs  wave_heating.rs
src/photosphere_module/: photosphere.rs
