[package]
name = "my_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters = "0.3.4"
rand = "0.8.4"

[[bin]]
name = "magnetic_reconnection"  # Name of the binary executable
path = "src/corona_module/magnetic_reconnection.rs"  # Relative path to the Rust source file